--- a/ControllerWithDefaultGridCRUD/ControllerWithDefaultGridCRUD/ControllerWithDefaultGridCRUD.csproj
+++ b/ControllerWithDefaultGridCRUD/ControllerWithDefaultGridCRUD/ControllerWithDefaultGridCRUD.csproj
@@ -65,10 +65,13 @@
     <Compile Include="UI\ModelType.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Templates\CustomCodeGenerator\IndexWithGridPartial.cshtml.t4">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Templates\CustomCodeGenerator\AjaxBatchGridViewTemplate.cs.t4">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Templates\CustomCodeGenerator\AjaxCRUDControllerTemplate.cs.t4">
+    <None Include="Templates\CustomCodeGenerator\AjaxCRUDControllerTemplate.cshtml.t4">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
